syntax = "proto3";

package face_verification;

option go_package = "github.com/youknow2509/cio_verify_face/server/service_profile_update/proto;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";


service FaceVerificationService {
    rpc EnrollFace(EnrollRequest) returns (EnrollResponse);
    rpc VerifyFace(VerifyRequest) returns (VerifyResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (StatusResponse);
    rpc DeleteProfile(DeleteProfileRequest) returns (StatusResponse);
    rpc GetUserProfiles(GetUserProfilesRequest) returns (GetUserProfilesResponse);
    rpc CleanupProfiles(CleanupProfilesRequest) returns (StatusResponse);

    // Batch methods for server-to-server communication
    rpc BatchEnrollFace(BatchEnrollRequest) returns (BatchEnrollResponse);
    rpc BatchVerifyFace(BatchVerifyRequest) returns (BatchVerifyResponse);
    rpc BatchDeleteProfile(BatchDeleteProfileRequest) returns (BatchDeleteProfileResponse);
    rpc BatchUpdateProfile(BatchUpdateProfileRequest) returns (BatchUpdateProfileResponse);

    // Streaming methods for file uploads
    rpc StreamEnrollFace(stream StreamEnrollRequest) returns (EnrollResponse);
    rpc StreamUpdateProfile(stream StreamUpdateProfileRequest) returns (StatusResponse);
}

message EnrollRequest {
    bytes image_data = 1;
    string user_id = 2;
    string company_id = 3;
    optional string device_id = 4;
    bool make_primary = 5;
    string filename = 6;
}

message EnrollResponse {
    string status = 1;
    string message = 2;
    optional string profile_id = 3;
    optional float quality_score = 4;
    repeated DuplicateProfile duplicate_profiles = 5;
}

message DuplicateProfile {
    string profile_id = 1;
    float similarity = 2;
}

message VerifyRequest {
    bytes image_data = 1;
    string company_id = 2;
    optional string user_id = 3;
    optional string device_id = 4;
    string search_mode = 5;
    int32 top_k = 6;
}

message VerifyResponse {
    string status = 1;
    bool verified = 2;
    repeated VerifyMatch matches = 3;
    optional VerifyMatch best_match = 4;
    optional string message = 5;
    optional float liveness_score = 6;
}

message VerifyMatch {
    string user_id = 1;
    string profile_id = 2;
    float similarity = 3;
    float confidence = 4;
    bool is_primary = 5;
}

message VerificationResult {
    string user_id = 1;
    float similarity = 2;
    string profile_id = 3;
}

message UpdateProfileRequest {
    string profile_id = 1;
    string company_id = 2;
    optional bytes image_data = 3;
    optional bool make_primary = 4;
    optional string filename = 5;
}

message StatusResponse {
    string status = 1;
    string message = 2;
}

message DeleteProfileRequest {
    string profile_id = 1;
    string company_id = 2;
    bool hard_delete = 3;
}

message GetUserProfilesRequest {
    string user_id = 1;
    string company_id = 2;
    int32 page_number = 3;
    int32 page_size = 4;
}

message FaceProfileResponse {
    string profile_id = 1;
    string user_id = 2;
    string company_id = 3;
    string embedding_version = 4;
    bool is_primary = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    optional google.protobuf.Timestamp deleted_at = 8;
    google.protobuf.Struct metadata = 9;
    optional float quality_score = 10;
}

message GetUserProfilesResponse {
    repeated FaceProfileResponse profiles = 1;
}

message CleanupProfilesRequest {
    string company_id = 1;
}

// Batch messages
message BatchEnrollRequest {
    repeated EnrollRequest requests = 1;
}

message BatchEnrollResponse {
    repeated EnrollResponse responses = 1;
}

message BatchVerifyRequest {
    repeated VerifyRequest requests = 1;
}

message BatchVerifyResponse {
    repeated VerifyResponse responses = 1;
}

message BatchDeleteProfileRequest {
    repeated DeleteProfileRequest requests = 1;
}

message BatchDeleteProfileResponse {
    repeated StatusResponse responses = 1;
}

message BatchUpdateProfileRequest {
    repeated UpdateProfileRequest requests = 1;
}

message BatchUpdateProfileResponse {
    repeated StatusResponse responses = 1;
}

// Streaming messages
message StreamEnrollRequest {
    oneof request_type {
        EnrollInfo info = 1;
        bytes chunk_data = 2;
    }
}

message EnrollInfo {
    string user_id = 1;
    string company_id = 2;
    optional string device_id = 3;
    bool make_primary = 4;
    string filename = 5;
}

message StreamUpdateProfileRequest {
    oneof request_type {
        UpdateProfileInfo info = 1;
        bytes chunk_data = 2;
    }
}

message UpdateProfileInfo {
    string profile_id = 1;
    string company_id = 2;
    optional bool make_primary = 3;
    optional string filename = 4;
}


